--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "revert": "nps db.revert",
     "test": "npm start test",
     "ci:pretest": "nps ci.pretest",
+    "ci:test": "nps ci.test",
     "build": "npm start build",
     "setup": "nps db.setup",
     "commit": "npx git-cz -a",
@@ -52,19 +53,15 @@
   "dependencies": {
     "@google-cloud/storage": "^3.1.0",
     "@hapi/joi": "^16.1.7",
-    "@slack/webhook": "^5.0.2",
-    "axios": "^0.19.2",
     "ba64": "^3.0.9",
     "bcrypt": "^3.0.7",
     "bcrypt-salt": "^1.1.5",
     "bluebird": "^3.7.1",
     "chalk": "^2.4.2",
-    "class-transformer": "^0.2.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "copyfiles": "^2.1.1",
     "cors": "^2.8.5",
-    "cron": "^1.7.2",
     "dataloader": "^1.4.0",
     "date-fns": "^2.11.0",
     "dotenv": "^8.2.0",
@@ -83,7 +80,6 @@
     "graphql": "14.4.2",
     "graphql-request": "^1.8.2",
     "helmet": "^3.22.0",
-    "iamporter": "^1.4.2",
     "io-ts": "^2.0.3",
     "io-ts-types": "^0.5.5",
     "ioredis": "^4.14.1",
@@ -104,13 +100,11 @@
     "ramda": "^0.26.1",
     "rand-token": "^0.4.0",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.8.0",
+    "routing-controllers": "^0.9.0-alpha.3",
     "shallow-equal-object": "^1.1.1",
     "ts-events": "^3.4.0",
-    "ts-iamport": "^0.0.4",
     "ts-node": "8.3.0",
     "tslint": "^5.18.0",
-    "twilio": "^3.39.3",
     "type-graphql": "^0.17.4",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.24",
